Fixing centered problemns

--- a/index.html
+++ b/index.html
@@ -14,36 +14,42 @@
     </section>
     <section class="main_container">
         <section class="container">
-            <div class="photo_header">
-                <p><strong>My first photo</strong></p>
-                <p>12/14</p>
-            </div>
-            <figure class="image image_one">
-                <img src="./perro-pug-corriendo.jpg" alt="Perro pug carlino corriendo por parque">
-            </figure>
-            <div class="text">
-                <p>This is a photo of me running in the park. This is a multi line comment for testing purposes. I am learning to code with </p>
-            </div>
-            <div class="photo_header">
-                <p>My second photo</p>
-                <p>12/17</p>
-            </div>
-            <figure class="image image_two">
-                <img src="./pug-m.jpg" alt="Perro pug carlino mirando con ternura">
-            </figure>
-            <div class="text">
-                <p>This is a photo of me looking at you to bribe you with my cuteness. This is a multi line comment for testing purposes. I am learning to code with </p>
-            </div>
-            <div class="photo_header">
-                <p>My third photo</p>
-                <p>12/17</p>
-            </div>
-            <figure class="image image_three">
-                <img src="./belcia1-6.jpg" alt="Perro pug carlino comiendose el tocino">
-            </figure>
-            <div class="text">
-                <p>This is a photo of me eating mamas food with no shame at all. This is a multi line comment for testing purposes. I am learning to code with </p>
-            </div>
+            <section class="photo-one photo">
+                <div class="photo_header">
+                    <p><strong>My first photo</strong></p>
+                    <p>12/14</p>
+                </div>
+                <figure class="image image_one">
+                    <img src="./perro-pug-corriendo.jpg" alt="Perro pug carlino corriendo por parque">
+                </figure>
+                <div class="text">
+                    <p>This is a photo of me running in the park. This is a multi line comment for testing purposes. I am learning to code with </p>
+                </div>
+            </section>
+            <section class="photo-two photo">
+                <div class="photo_header">
+                    <p>My second photo</p>
+                    <p>12/17</p>
+                </div>
+                <figure class="image image_two">
+                    <img src="./pug-m.jpg" alt="Perro pug carlino mirando con ternura">
+                </figure>
+                <div class="text">
+                    <p>This is a photo of me looking at you to bribe you with my cuteness. This is a multi line comment for testing purposes. I am learning to code with </p>
+                </div>
+            </section>
+            <section class="photo-three photo">
+                <div class="photo_header">
+                    <p>My third photo</p>
+                    <p>12/17</p>
+                </div>
+                <figure class="image image_three">
+                    <img src="./belcia1-6.jpg" alt="Perro pug carlino comiendose el tocino">
+                </figure>
+                <div class="text">
+                    <p>This is a photo of me eating mamas food with no shame at all. This is a multi line comment for testing purposes. I am learning to code with </p>
+                </div>
+            </section>
         </section>
     </section>
 </body>
